<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormulaireActivity">

    <EditText
        android:id="@+id/collectFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textFormDateNaissance"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textIntroFormulaire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="50dp"
        android:text="@string/textIntroFormulaire"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textFormNom"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textFormNom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/textFormNom"
        app:layout_constraintBottom_toTopOf="@+id/collectName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textFormPrenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/textFormPrenom"
        app:layout_constraintBottom_toTopOf="@+id/collectFirstName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textFormDateNaissance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/textFormDateNaissance"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/collectName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textFormPrenom"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSaveForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="40dp"
        android:text="@string/buttonSaveForm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSaveForm"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/collectBirthday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="@string/collectBirthday" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/SeeForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="40dp"
        android:text="@string/SeeForm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSaveForm" />
</androidx.constraintlayout.widget.ConstraintLayout>